<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".detalle.MainActivity">

        <TextView
            android:id="@+id/textView_cundinamarca"
            style="@style/Texto_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/minas_cundinamarca"
            android:textAlignment="center"
            android:textColor="@color/black"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView_nombre"
            android:layout_width="412dp"
            android:layout_height="233dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:scaleType="fitXY"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/textView2Descripcion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_cundinamarca"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/cundinamarca"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <TextView
            android:id="@+id/textView2Descripcion"
            style="@style/Texto_normal"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/Descripcion_cundinamarca"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_nombre" />

        <TextView
            android:id="@+id/textView3Temperatura"
            style="@style/Texto_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/Temperatura"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.152"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView5Ubicacion" />

        <TextView
            android:id="@+id/textView5Ubicacion"
            style="@style/Texto_normal"
            android:layout_width="261dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/ubicacion_cundinamarca"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2Descripcion" />

        <TextView
            android:id="@+id/textView6SitiosR"
            style="@style/Texto_normal"
            android:layout_width="260dp"
            android:layout_height="158dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/Sitios_Recomendados_Cundinamarca"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3Temperatura" />

        <TextView
            android:id="@+id/textView7"
            style="@style/Texto_subtitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/Descripcion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_nombre" />

        <TextView
            android:id="@+id/textView8"
            style="@style/Texto_subtitulo"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/ubicacion_c"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2Descripcion" />

        <TextView
            android:id="@+id/textView9"
            style="@style/Texto_subtitulo"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/temperatura_Cundinamarca"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5Ubicacion" />

        <TextView
            android:id="@+id/textView10"
            style="@style/Texto_subtitulo"
            android:layout_width="110dp"
            android:layout_height="81dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/sitios_cundinamarca"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3Temperatura" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>