<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageViewantioquia1"
                android:layout_width="150dp"
                android:layout_height="180dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/imagenantioquiacardview"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.388"
                app:srcCompat="@drawable/cascada" />

            <TextView
                android:id="@+id/textView17sitio"
                style="@style/Texto_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/AntioquiaTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewantioquia1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView18descripcion"
                style="@style/Texto_normal"
                android:layout_width="192dp"
                android:layout_height="166dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="8dp"
                android:text="@string/peq_descripcion_antioquia"
                app:layout_constraintBottom_toTopOf="@+id/imageView3puntuacion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.904"
                app:layout_constraintStart_toEndOf="@+id/imageViewantioquia1"
                app:layout_constraintTop_toBottomOf="@+id/textView17sitio" />

            <ImageView
                android:id="@+id/imageView3puntuacion"
                android:layout_width="150dp"
                android:layout_height="39dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="45dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/imagenestrellasantioquia"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/imageViewantioquia1"
                app:layout_constraintTop_toBottomOf="@+id/textView18descripcion"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/estrellas"
                tools:ignore="ImageContrastCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>